# Design-Pattern-Detection-Tool

./: .clang-format  .gitignore  CMakeLists.txt  README.md  adapter1.xmi  adapter2.xmi  adapter3.xmi  adapter4.xmi  benchmark.md  test.xmi
src/: CMakeLists.txt  edge.hpp  gcdr.cpp  gcdr.hpp  graph.cpp  graph.hpp  main.cpp  node.cpp  node.hpp  parser.cpp  parser.hpp  pattern.cpp  pattern.def  pattern.hpp  pattern_analyzer.cpp  pattern_analyzer.hpp  pugiconfig.hpp  pugixml.cpp  pugixml.hpp  sfm.hpp  sfm_analyzer.cpp  sfm_analyzer.hpp  sp_detector.cpp  sp_detector.hpp  src_parser.cpp  sub_pattern.cpp  sub_pattern.hpp  subpattern.def
test/: 234.xmi  CMakeLists.txt  adapter-java-v2-1.xmi  reencode.sh
test/DesginPattern-Java/adapter/: Adapter.java
test/DesginPattern-Java/visitor/: Element.java  ObjectStructure.java  VisitorClient.java
test/abstract_factory/: abstract_factory-java-v2-1.xmi
test/adapter/: adapter-cpp-v2-1.xmi  adapter-java-v2-1.xmi  adapter-java-v2-runnoob.xmi  adapter-java-v2-runnoob2.xmi  adapter-runnoob.java  adapter1.xmi  adapter2.xmi  adapter3.xmi  adapter4.xmi
test/bridge/: bridge-java-v2-1.xmi
test/builder/: builder-cpp-v2-1.xmi  builder-cpp-v2-2.xmi  builder-java-v2-1.xmi
test/command/: command-java-v2-1.xmi
test/composite/: composite-cpp-v2-1.xmi  composite-cpp-v2-2.xmi  composite-java-v2-1.xmi
test/decorator/: decorator-java-v2-1.xmi
test/facade/: facade-java-v2-1.xmi
test/factory/: factory-java-v2-1.xmi
test/flyweight/: flyweight-java-v2-1.xmi
test/hodoku/: hodoku211-java-v2-1.xmi
test/hodoku/solver/: AbstractSolver.java  Als.java  AlsSolver.java  BruteForceSolver.java  ChainSolver.java  FishSolver.java  GiveUpSolver.java  GroupNode.java  IncompleteSolver.java  MiscellaneousSolver.java  SimpleSolver.java  SingleDigitPatternSolver.java  SudokuSolver.java  SudokuStepFinder.java  TableEntry.java  TablingSolver.java  TemplateSolver.java  UniquenessSolver.java  WingSolver.java
test/hodoku/sudoku/: AllStepsPanel.java  AlsInSolutionStep.java  BackdoorSearchDialog.java  Candidate.java  Chain.java  CheckNode.java  ClipboardMode.java  ConfigColorPanel.java  ConfigDialog.java  ConfigFindAllStepsPanel.java  ConfigGeneralPanel.java  ConfigGeneratorPanel.java  ConfigProgressPanel.java  ConfigSolverPanel.java  ConfigStepPanel.java  ConfigTrainigPanel.java  DifficultyLevel.java  DifficultyType.java  Entity.java  ExtendedPrintDialog.java  ExtendedPrintProgressDialog.java  FindAllStepsProgressDialog.java  GenerateSudokuProgressDialog.java  Main.java  MainFrame.java  MyFontChooser.java  NumbersOnlyDocument.java  Options.java  RegressionTester.java  SolutionCategory.java  SolutionPanel.java  SolutionStep.java  SolutionType.java  SplitPanel.java  StepConfig.java  Sudoku.java  Sudoku2.java  SudokuCell.java  SudokuPanel.java  SudokuSet.java  (+4 more)
test/interpreter/: interpreter-java-v2-1.xmi
test/iterator/: iterator-java-v2-1.xmi
test/jhotdraw5.1/: draw.xmi  figures.xmi
test/mediator/: mediator-java-v2-1.xmi
test/memento/: memento-java-v2-1.xmi
test/observer/: observer-java-v2-1.xmi
test/prototype/: prototype-java-v2-1.xmi
test/proxy/: proxy-cpp-v1-1.xmi  proxy-cpp-v2-1.xmi  proxy-cpp-v2-2.xmi  proxy-cpp-v2.5-3.xmi  proxy-cpp-v24-1.xmi  proxy-cpp-v241-1.xmi  proxy-java-v2-1.xmi  proxy.xmi
test/responsibilitychain/: rc-java-v2-1.xmi  rc-java-v2-2.xmi
test/runnoob/: builder.java
test/runnoob/AbstractFactoryPattern/: AbstractFactory.java  AbstractFactoryPatternDemo.java  Blue.java  Circle.java  Color.java  ColorFactory.java  FactoryProducer.java  Green.java  Rectangle.java  Red.java  Shape.java  ShapeFactory.java  Square.java
test/runnoob/AdapterPattern/: AdapterPatternDemo.java  AdvancedMediaPlayer.java  AudioPlayer.java  MediaAdapter.java  MediaPlayer.java  Mp4Player.java  VlcPlayer.java
test/runnoob/BridgePattern/: BridgePatternDemo.java  Circle.java  DrawAPI.java  GreenCircle.java  RedCircle.java  Shape.java
test/runnoob/BuilderPattern/: Bottle.java  BuilderPatternDemo.java  Burger.java  ChickenBurger.java  Coke.java  ColdDrink.java  Item.java  Meal.java  MealBuilder.java  Packing.java  Pepsi.java  VegBurger.java  Wrapper.java
test/runnoob/ChainOfResponsibilityPattern/: AbstractLogger.java  ChainPatternDemo.java  ConsoleLogger.java  ErrorLogger.java  FileLogger.java
test/runnoob/CommandPattern/: Broker.java  BuyStock.java  CommandPatternDemo.java  Order.java  SellStock.java  Stock.java
test/runnoob/CompositePattern/: CompositePatternDemo.java  Employee.java
test/runnoob/DecoratorPattern/: Circle.java  DecoratorPatternDemo.java  Rectangle.java  RedShapeDecorator.java  Shape.java  ShapeDecorator.java
test/runnoob/FacadePattern/: Circle.java  FacadePatternDemo.java  Rectangle.java  Shape.java  ShapeMaker.java  Square.java
test/runnoob/FactoryPattern/: Circle.java  FactoryPatternDemo.java  Rectangle.java  Shape.java  ShapeFactory.java  Square.java
test/runnoob/FilterPattern/: AndCriteria.java  Criteria.java  CriteriaFemale.java  CriteriaMale.java  CriteriaPatternDemo.java  CriteriaSingle.java  OrCriteria.java  Person.java
test/runnoob/FlyweightPattern/: Circle.java  FlyweightPatternDemo.java  Shape.java  ShapeFactory.java
test/runnoob/InterpreterPattern/: AndExpression.java  Expression.java  InterpreterPatternDemo.java  OrExpression.java  TerminalExpression.java
test/runnoob/IteratorPattern/: Container.java  Iterator.java  IteratorPatternDemo.java  NameRepository.java
test/runnoob/MediatorPattern/: ChatRoom.java  MediatorPatternDemo.java  User.java
test/runnoob/MementoPattern/: CareTaker.java  Memento.java  MementoPatternDemo.java  Originator.java
test/runnoob/NullObjectPattern/: AbstractCustomer.java  CustomerFactory.java  NullCustomer.java  NullPatternDemo.java  RealCustomer.java
test/runnoob/ObserverPattern/: BinaryObserver.java  (+5 more)
test/singleton/: singleton-java-v2-1.xmi
test/state/: state-java-v2-1.xmi
test/strategy/: strategy-java-v2-1.xmi
test/template/: template-java-v2-1.xmi
test/visitor/: visitor-cpp-v2-1.xmi  visitor-java-v2-1.xmi  visitor-java-v2-2.xmi  visitor-java-v2-3.xmi  visitor2.xmi
(+69 files in other folders)
